Add a lambda for updating the verfiication
